# IPcam

./: README.md  issu list.txt  tar.sh
0703.app/: Makefile  Makefile - org  Makefile - woo  Makefile.nova  Makefile.param  Makefile.pretty  change_model.sh  ecam  level  main.c  min.init_val  relay.h  sensor.h  version  version - 복사본
0703.app/_config/: model_spec.c  model_spec.h
0703.app/device/: codecdev.c  codecdev.h  flash.c  flash.h  gpio.h  hi_i2c.h  quaddev.c  quaddev.h  tty.c  tty.h  vo.c  vo.h
0703.app/device/vo/MDIN3xx_mainAPI_v0.39_15Jun2017/: CMakeLists.txt  app325a.c  history-mainAPI.txt  mdin3xx.c  mdin3xx.h  mdindly.c  mdini2c.c  mdintype.h  readme.txt
0703.app/encoder/: enc_typedef.h  encoder.c  encoder.h  encoder_common.h  osd.c  osd.h  osd_datetime.c  osd_datetime.h  osd_status.c  osd_status.h  osd_title.c  osd_title.h  soc_common.h  vfb.c  vfb.h  video_default.h
0703.app/file/: file.c  file.h  hdd.c  hdd.h  log.c  log.h  playback.c  playback.h  ssf.c  ssf.h  ssfsearch.c  ssfsearch.h
0703.app/include/: common.h  dvr.h  err.h  http.h  ini.h  list.h  main.h  oem.h  oem_xml.h  oem_xml_IP42-327.h  oem_xml_define.h
0703.app/ipc/: ipc_client.c  ipc_client.h  ipc_protocol.h  ipc_server.c  ipc_server.h  ipc_server_proc.c  ipc_server_proc.h  ipc_status.c  ipc_status.h
0703.app/isp/: isp_common.c  isp_ctrl.h  nv_isp.h  nv_isp_ae.h  nv_isp_awb.h  nv_isp_iq.h
0703.app/keybd/: keybd.c  keybd.h
0703.app/kmsg/: kmsg.c  kmsg.h
0703.app/lib/: CircularBuffer.c  (+52 more)
_package/: change_model.sh  make_clean.sh  make_ecam_21C26IP6.sh  make_ecam_ip42-327.sh
(+2218 files in other folders)
